# MethodsOfComputation-pract

./: .gitignore  CMakeLists.txt  README.md
core/: CMakeLists.txt
core/Matrix/: CMakeLists.txt
core/Matrix/benchmarks/: BM_genfromtxt.cpp
core/Matrix/docs/html/: _matrix_8hpp_source.html  annotated.html  annotated_dup.js  class_matrix-members.html  class_matrix.html  class_matrix.js  class_matrix_op-members.html  class_matrix_op.html  class_matrix_op.js  classes.html  dir_1980d45cf0f5d379b20659e576a76c09.html  dir_44cec6e3ea30e076b9313c4641539d9f.html  dir_661cf82a474966fba223cdd0be0e4ff1.html  dir_6ef0488268b7478d575d4f2ee4addefe.html  dir_9d7031f24dc7a31c24d4a307c0727980.html  dir_c2c79bc67c21a154df9c8543464cce7d.html  dir_d28a4824dc47e487b107a5db32ef43c4.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  dir_dc34a6580da7a5ffd17e5e8c69e31587.html  dir_e4bf6c24af1e928aa542ce5558738c1f.html  dir_ff6ef622f956fb741c1a06761f3c3b4b.html  files.html  functions.html  functions_func.html  functions_vars.html  index.html  matrix__basic_8hpp_source.html  matrix__operations_8hpp_source.html  md__c_o_d_e__o_f__c_o_n_d_u_c_t.html  md__r_e_a_d_m_e.html  navtreedata.js  navtreeindex0.js  pages.html
core/Matrix/docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  functions_e.js  functions_f.js  pages_0.js  pages_1.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js
core/Matrix/include/: matrix_operations.cpp  matrix_operations.hpp
core/includes/: FunctionReader.h  Functions.h  NonLinSolve.hpp  header.hpp
core/source/: FunctionReader.cpp  Functions.cpp  source.cpp
ev3/: CMakeLists.txt
ev3/lib/: CMakeLists.txt
examples/Interpolation/: CMakeLists.txt
examples/Interpolation/source/: main.cpp
examples/NDiff/: CMakeLists.txt
examples/NDiff/source/: main.cpp
examples/NInt/: CMakeLists.txt
examples/NInt/source/: main.cpp
examples/NIntMod/: 51tests.txt  52tests.txt  53tests.txt  CMakeLists.txt
examples/NIntMod/source/: main.cpp
examples/NSolve/: CMakeLists.txt
examples/NSolve/source/: main.cpp
examples/ODE/: CMakeLists.txt  tests.txt
examples/ODE/source/: main.cpp
examples/ReverseInterpolation/: CMakeLists.txt
examples/ReverseInterpolation/source/: main.cpp
fparser/: CMakeLists.txt  fpconfig.hh  script.sh
interface/: CMakeLists.txt
interface/source/: main.cpp
